--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto-random-string": "^3.1.0",
     "express": "^4.17.1",
     "glob": "^7.1.6",
+    "bcrypt": "^4.0.1",
     "mkdirp": "^1.0.3",
     "debug": "^4.1.1",
     "ms": "^2.1.2",
